force-app/main/default/objects/Putaway_Task__c/Putaway_Task__c.object-meta.xml
<CustomObject>
    <label>Putaway Task</label>
    <nameField>
        <displayFormat>PUT-{00000}</displayFormat>
        <label>Putaway Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Putaway Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>