force-app/main/default/objects/Putaway_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Putaway Tasks</relationshipLabel>
    <relationshipName>Putaway_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>