force-app/main/default/objects/Putaway_Task__c/fields/Destination_Bin__c.field-meta.xml
<CustomField>
    <fullName>Destination_Bin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Bin</label>
    <referenceTo>Bin_Location__c</referenceTo>
    <relationshipLabel>Completed Putaway Tasks</relationshipLabel>
    <relationshipName>Completed_Putaway_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>