force-app/main/default/objects/Putaway_Task__c/fields/Inbound_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Shipment</label>
    <referenceTo>Inbound_Shipment__c</referenceTo>
    <relationshipLabel>Putaway Tasks</relationshipLabel>
    <relationshipName>Putaway_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>