force-app/main/default/objects/Putaway_Task__c/fields/Receiving_Task__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Task</label>
    <referenceTo>Receiving_Task__c</referenceTo>
    <relationshipLabel>Putaway Tasks</relationshipLabel>
    <relationshipName>Putaway_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>