force-app/main/default/objects/Putaway_Task__c/fields/Source_Bin__c.field-meta.xml
<CustomField>
    <fullName>Source_Bin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Bin</label>
    <referenceTo>Bin_Location__c</referenceTo>
    <relationshipLabel>Putaway Source Tasks</relationshipLabel>
    <relationshipName>Putaway_Source_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>