force-app/main/default/objects/Putaway_Task__c/fields/Suggested_Bin__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Bin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested Bin</label>
    <referenceTo>Bin_Location__c</referenceTo>
    <relationshipLabel>Suggested Putaway Tasks</relationshipLabel>
    <relationshipName>Suggested_Putaway_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>