force-app/main/default/objects/Putaway_Task__c/validationRules/Destination_Must_Differ_From_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Destination_Must_Differ_From_Source</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Destination_Bin__c)), Destination_Bin__c = Source_Bin__c)</errorConditionFormula>
    <errorMessage>Destination bin must be different from the source bin.</errorMessage>
</ValidationRule>